1.rename db_update.py to db.py 2. persistant db

--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,20 @@ env/
 *.swo
 
 # ChromaDB persistence
+chroma_db/
 chroma_data/
+*.sqlite3
 
 # Distribution / packaging
 dist/
 build/
 *.egg-info/
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
 
 # Misc
 .DS_Store
